--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Source-OpenSans ,sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -30,3 +29,25 @@ li::before {
 li {
   display: inline-flex;
 }
+
+@font-face {
+  font-family: 'Source-OpenSans';
+  src: url('../public/assets/fonts/SourceSansPro-Regular.ttf');
+  src: url('../public/assets/fonts/SourceSansPro-SemiBold.ttf');
+  font-weight: 400;
+  font-style: normal;
+}  
+
+
+@font-face {
+  font-family: 'Source-OpenSansLight';
+  src: url('../public/assets/fonts/SourceSansPro-Light.ttf');
+  font-style: normal;
+}  
+
+
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: url('../public/assets/fonts/Poppins-Regular.ttf');
+  font-style: normal;
+}  
