--- a/styles/globals.css
+++ b/styles/globals.css
@@ -180,3 +180,67 @@ li {
   transform: translateY(0.6rem * 8) scale(0.5);
  }
 }
+
+
+
+
+
+
+
+  .arrows {
+    position: relative;
+    /**/
+    position: absolute;
+    top:50%;
+    left:50%;
+    /**/
+    width:80px;
+    height:80px;
+    transform:translate(-50%,-50%);
+   
+}
+
+.arrows::before{
+    content: '';
+    position: absolute;
+    width:100%;
+    height:100%;
+    border-left:80px/3 solid rgba(0,0,0,0.7);
+    border-bottom:80px/3 solid rgba(0,0,0,0.7);
+    transform:translate(80px/3,80px*4/3)rotate(-45deg);
+    animation: arrows 3s linear infinite;
+}
+
+.arrows::after{
+    content: '';
+    position: absolute;
+    width:100%;
+    height:100%;
+    border-left:80px/3 solid rgba(0,0,0,0.7);
+    border-bottom:80px/3 solid rgba(0,0,0,0.7);
+    transform:translate(80px*2/3,0px)rotate(-45deg) ;
+    animation: arrows 3s linear infinite 3s/-2;
+  
+}
+
+@keyframes arrows {
+  0% {
+      border-left:80px/3 solid rgba(0,0,0,0);
+      border-bottom:80px/3 solid rgba(0,0,0,0);
+      transform:translate(80px/-6,80px*4/-6)rotate(-45deg) ;
+  }
+  10%, 90% {
+      border-left:80px/3 solid rgba(0,0,0,0);
+      border-bottom:80px/3 solid rgba(0,0,0,0);
+  }
+  50% {
+      border-left:80px/3 solid rgba(0,0,0,0.7);
+      border-bottom:80px/3 solid rgba(0,0,0,0.7);
+      transform:translate(80px/-6,0px)rotate(-45deg) ;
+  }
+  100% {
+      border-left:80px/3 solid rgba(0,0,0,0);
+      border-bottom:80px/3 solid rgba(0,0,0,0);
+      transform:translate(80px/-6,80px*4/6)rotate(-45deg) ;
+  }
+}
