fixing global css styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,10 +119,10 @@ li {
 
 .container {
  display: flex;
+ flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
- height: 100vh;
 }
 
 .chevron {
